--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,17 +46,18 @@ add_executable(bayan main.cpp bayan.cpp)
 
 add_executable(tests tests.cpp)
 
+if($ENV{APPVEYOR_BUILD_NUMBER})
+    set (Boost_USE_STATIC_LIBS ON)
+else()
+    set_target_properties(bayan PROPERTIES COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK)
+endif()
+
 if($ENV{TRAVIS_BUILD_NUMBER})
     target_link_libraries(tests PRIVATE gtest gtest_main ${Boost_LIBRARIES} stdc++fs)
     target_link_libraries(bayan ${Boost_LIBRARIES} stdc++fs)
 else()
     target_link_libraries(tests PRIVATE gtest gtest_main ${Boost_LIBRARIES})
     target_link_libraries(bayan ${Boost_LIBRARIES})
-endif()
-
-
-if(!$ENV{APPVEYOR_BUILD_NUMBER})
-    set_target_properties(bayan PROPERTIES COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK)
 endif()
 
 install(TARGETS bayan DESTINATION bin)
