--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,8 @@ add_executable(bayan main.cpp bayan.cpp)
 add_executable(tests tests.cpp)
 
 if($ENV{APPVEYOR_BUILD_NUMBER})
-    add_definitions("-DBOOST_ALL_NO_LIB=1")
+    target_link_libraries(bayan Boost::program_options)
+    target_link_libraries(tests Boost::program_options)
 else()
     set_target_properties(bayan PROPERTIES COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK)
 endif()
