--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,16 +48,17 @@ add_executable(tests tests.cpp)
 
 if($ENV{APPVEYOR_BUILD_NUMBER})
     set(Boost_USE_STATIC_LIBS ON)
-else()
-    set_target_properties(bayan PROPERTIES COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK)
-endif()
 
-if($ENV{TRAVIS_BUILD_NUMBER})
+    target_link_libraries(tests PRIVATE STATIC gtest gtest_main Boost::program_options)
+    target_link_libraries(bayan STATIC Boost::program_options)
+elseif($ENV{TRAVIS_BUILD_NUMBER})
     target_link_libraries(tests PRIVATE gtest gtest_main Boost::program_options stdc++fs)
     target_link_libraries(bayan Boost::program_options stdc++fs)
+    set_target_properties(bayan PROPERTIES COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK)
 else()
     target_link_libraries(tests PRIVATE gtest gtest_main Boost::program_options)
     target_link_libraries(bayan Boost::program_options)
+    set_target_properties(bayan PROPERTIES COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK)
 endif()
 
 install(TARGETS bayan DESTINATION bin)
