trying things until it works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,8 @@ add_executable(tests tests.cpp)
 if($ENV{APPVEYOR_BUILD_NUMBER})
     set(Boost_USE_STATIC_LIBS ON)
 
-    target_link_libraries(tests PRIVATE STATIC gtest gtest_main Boost::program_options)
-    target_link_libraries(bayan STATIC Boost::program_options)
+    add_library("boost_po" STATIC Boost::program_options)
+    target_link_libraries(tests PRIVATE gtest gtest_main)
 elseif($ENV{TRAVIS_BUILD_NUMBER})
     target_link_libraries(tests PRIVATE gtest gtest_main Boost::program_options stdc++fs)
     target_link_libraries(bayan Boost::program_options stdc++fs)
