--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,17 +47,13 @@ add_executable(bayan main.cpp bayan.cpp)
 add_executable(tests tests.cpp)
 
 if($ENV{APPVEYOR_BUILD_NUMBER})
-    set(Boost_USE_STATIC_LIBS ON)
-
-    target_link_libraries(tests PRIVATE gtest gtest_main Boost::program_options)
-    target_link_libraries(bayan Boost::program_options)
+    target_link_libraries(tests PRIVATE gtest gtest_main)
 elseif($ENV{TRAVIS_BUILD_NUMBER})
-    target_link_libraries(tests PRIVATE gtest gtest_main Boost::program_options stdc++fs)
-    target_link_libraries(bayan Boost::program_options stdc++fs)
+    target_link_libraries(tests PRIVATE gtest gtest_main stdc++fs)
+    target_link_libraries(bayan stdc++fs)
     set_target_properties(bayan PROPERTIES COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK)
 else()
-    target_link_libraries(tests PRIVATE gtest gtest_main Boost::program_options)
-    target_link_libraries(bayan Boost::program_options)
+    target_link_libraries(tests PRIVATE gtest gtest_main)
     set_target_properties(bayan PROPERTIES COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK)
 endif()
 
